<resources>
    <string name="app_name">DRC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">ROM version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.
        <b>Please note! This operation will change your device settings based on the settings stored in this file.
            <font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font>
        </b>
        Rom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount
        of your settings this may take some time. Please click \"CONFIRM\" to proceed or \"CANCEL\" to quit.
    </string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="systemui_prefs">SystemUI prefs</string>
    <string name="phone_prefs">Phone prefs</string>
    <string name="framework_prefs">Framework prefs</string>
    <string name="notification_panel_prefs">Notification panel prefs</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="multiple_choice_preference_button_done">Done</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="debloat_rom_menu_title">Debloat rom</string>
    <string name="select_all_label">All</string>
    <string name="deluxe_statusbar_preference">Statusbar</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="sb_icons_preferences">Statusbar icon preferences</string>
    <string name="tminit_preferences">3Minit preferences</string>
    <string name="tminit_icon">3MinitBattery icon</string>
    <string name="stock_preferences">Stock preferences</string>
    <string name="show_battery">Show stock battery</string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="battery">Battery</string>
    <string name="battery_summary">Stock/3MinitBattery/Colors</string>
    <string name="clock">Clock</string>
    <string name="clock_summary">Visibility/Elements/Sizes/Fonts/Colors</string>
    <string name="visibility">Visibility</string>
    <string name="position">Position</string>
    <string name="global_indiv">Select global or individual color</string>
    <string name="use_global_color">Use global/individual color</string>
    <string name="cl_global">Global color</string>
    <string name="colors">Colors</string>
    <string name="hours">Hours</string>
    <string name="mins">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="hour_separator">Separator (2 points)</string>
    <string name="day">Day</string>
    <string name="fonts">Fonts</string>
    <string name="date">Date</string>
    <string name="font">Font</string>
    <string name="select_indiv_fonts">Select individual fonts</string>
    <string name="dayfont">Day font</string>
    <string name="datefont">Date font</string>
    <string name="hour_mins_secs_font">Hours/Mins/Secs font</string>
    <string name="ampmfont">AM/PM font</string>
    <string name="sizes">Sizes</string>
    <string name="select_indv_sizes">Select individual sizes</string>
    <string name="hours_mins_size">Hours/Mins/Secs size</string>
    <string name="separator_size">Hour separator size (2 points)</string>
    <string name="day_size">Day size</string>
    <string name="date_size">Date size</string>
    <string name="ampm_size">AM/PM size</string>
    <string name="extra_clock_prfs">Elements to show/Other settings</string>
    <string name="extra_clock_prfs_summary">Select what to show and in what order</string>
    <string name="show_seconds">Show seconds</string>
    <string name="show_day">Show day</string>
    <string name="show_whole_day">Show whole day</string>
    <string name="show_date">Show date</string>
    <string name="show_whole_year">Show whole year</string>
    <string name="uppercase_ampm">Show AM/PM uppercase</string>
    <string name="separator">Separator</string>
    <string name="elem_order">Elements order</string>
    <string name="date_order">Date order</string>
    <string name="icons_col">Icons colors</string>
    <string name="icons_summary">Wifi/Signal/Mobile/Percentage/Bluetooth</string>
    <string name="global_separated">Global/Separated color</string>
    <string name="gb_color">Global color</string>
    <string name="wifi">WiFi</string>
    <string name="wifiarrws">WiFi arrows</string>
    <string name="mbl_data">Mobile data</string>
    <string name="mbl_data_arrws">Mobile data arrows</string>
    <string name="roaming">Roaming</string>
    <string name="signal">Signal</string>
    <string name="airplane">Airplane mode</string>
    <string name="bt_percentage">Battery percentage</string>
    <string name="sb_carrier">Carrier text</string>
    <string name="carrier_summary">Visibility/Text/Color/Font</string>
    <string name="visibility_carrier">Text visibility</string>
    <string name="use_customtext">Use custom text</string>
    <string name="text_edit">Edit the text</string>
    <string name="carrier_font">Font</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="other_mods">Other mods</string>
    <string name="bt_bar">Battery bar</string>
    <string name="show_bt_bar">Show battery bar</string>
    <string name="bt_bar_anim">Use charging animation</string>
    <string name="dt2s">Double tap to sleep</string>
    <string name="quick_pulldown">One swipe from right side</string>
    <string name="quick_pulldown_yes">Show all toggles</string>
    <string name="quick_pulldown_no">Normal view</string>
    <string name="statusbar">Statusbar</string>
    <string name="notpanel">Notification panel</string>
    <string name="speedmetters">Speedmetters</string>
    <string name="virtualbuttons">Virtual buttons</string>
    <string name="menureboot">Reboot menu</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="navbar">Navigation bar</string>
    <string name="apps">Applications</string>
    <string name="bg_tg_bt_br">Background/Toggles/Buttons/Brightness</string>
    <string name="use_custom_color">Use custom/stock colors</string>
    <string name="panel_bg">Background panel</string>
    <string name="panel_settings_bt">Settings button</string>
    <string name="panel_mnore_settings">More settings button (3 points)</string>
    <string name="hour">Hour</string>
    <string name="handler">Handler (2 lines)</string>
    <string name="toggles_on">Toggles on</string>
    <string name="toggles_off">Toggles off</string>
    <string name="brightness_icon">Brightness icon</string>
    <string name="brightness_detail_icon">Brightness settings icon</string>
    <string name="datausage">Data usage</string>
    <string name="datausage_summary">Visibility/Position/Font/Color</string>
    <string name="show_hide">Show/Hide</string>
    <string name="custombg">Custom background</string>
    <string name="custombg_summary">Color/Gradient/Image</string>
    <string name="matrix">Matrix effect</string>
    <string name="matrix_summary">Visibility/Color/Size</string>
    <string name="matrix_bg_color">Background color</string>
    <string name="matrix_txt_color">Text color</string>
    <string name="matrix_frqnc">Text frequency</string>
    <string name="ramaokp">RAM bar A.O.K.P</string>
    <string name="ramaokpsummary">Visibility/Colors</string>
    <string name="showhide">Show/Hide</string>
    <string name="freeram">Free RAM</string>
    <string name="usedram">Used RAM</string>
    <string name="rotation">Rotation</string>
    <string name="usb_wakeup">Wake up on USB connection</string>
    <string name="show_iris_preview">Show iris preview</string>
    <string name="biometric_on_boot">Biometric on reboot</string>
    <string name="fp_wakeup">Fingerprint sensor wake-up</string>
    <string name="pattern_colors">Pattern color</string>
    <string name="error_color">Error color</string>
    <string name="success_color">Success color</string>
    <string name="regular_color">Regular color</string>
    <string name="use_custom_pattern">Use custom patter colors</string>
    <string name="unlock_animation">Unlock animation</string>
    <string name="secure_reply">Quickreply always</string>
</resources>